--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading">Practice Shark helps clinics, medical practices, and healthcare agenies</div>
-                <div class="masthead-heading text-uppercase">maximize their potential earning and exposure within the market.</div>
+                <div class="masthead-subheading">Use Practice Shark </div>
+                <div class="masthead-heading text-uppercase">maximize your market share and clinical operations today!</div>
                 <a class="btn btn-primary btn-xl text-uppercase" href="#services">Help my Practice Today!</a>
             </div>
         </header>
