--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#services">Our Services</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#portfolio">Select your Need</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#about">Timeline</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#team">Trustworthy Team</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                     </ul>
                 </div>
@@ -39,7 +39,7 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <div class="masthead-subheading">Use Practice Shark </div>
+                <div class="masthead-subheading">Practice Shark: Medical Consulting & Advertising </div>
                 <div class="masthead-heading text-uppercase">maximize your market share and clinical operations today!</div>
                 <a class="btn btn-primary btn-xl text-uppercase" href="#services">Help my Practice Today!</a>
             </div>
